--- a/frontend2/index.html
+++ b/frontend2/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pylon</title>
+    <!-- SMUI Styles -->
+    <link rel="stylesheet" href="smui.css" media="(prefers-color-scheme: light)" />
+    <link
+      rel="stylesheet"
+      href="smui-dark.css"
+      media="screen and (prefers-color-scheme: dark)"
+    />
   </head>
   <body>
     <div id="app"></div>
